--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -71,11 +71,12 @@ body
          left: 0
    &_left-center
       padding-right: 120px
+      padding-bottom: 0
       text-align: left
       &::after
          right: 0
          bottom: 50%
-         margin-bottom: 2px
+         margin-bottom: -5px
          content: ''
    &_full-white
       color: #fff
@@ -85,7 +86,9 @@ body
          color: #fff
       #{$parent}_blue &
          color: $color1
-         
+   &_no-decor
+      &::after
+         display: none
 .title-lg
    +f('ms900')
    font-size: 58px
@@ -105,22 +108,39 @@ body
    padding: 19px 30px
    outline: 0
    border-radius: 50px
-   transition: .3s ease-in-out
    +f('ms900', 18, 30, 100)
    text-transform: uppercase
    color: #fff
    text-shadow: 0 2px 1px rgba(31, 23, 3, 0.18)
+   text-align: center
    box-shadow: 0 16px 15px rgba(6, 44, 69, 0.13)
+   overflow: hidden
+   cursor: pointer
+   &::after
+      position: absolute
+      top: -2px
+      left: -2px
+      right: -2px
+      height: calc(200% + 4px)
+      pointer-events: none
+      transition: .4s cubic-bezier(0.22, 0.61, 0.36, 1)
+      content: ''
+   &:hover
+      &::after
+         transform: translateY(-50%)
+   span
+      position: relative
+      z-index: 1
    &_yellow
       border-radius: 35px
-      border: 1px solid #f6db2c
-      background-color: #fff
-      background-image: linear-gradient(to top, #f5ac0f 0%, #ffeb3e 100%)
+      &::after
+         border: 1px solid #f6db2c
+         background-image: linear-gradient(to top, #ffeb3e 0%, #f5ac0f 50%, #ffeb3e 100%)
    &_blue
       border-radius: 35px
-      border: 1px solid #71cbff
-      background-color: #ffffff
-      background-image: linear-gradient(to top, #1799ed 0%, #59bffa 100%)
+      &::after
+         border: 1px solid #71cbff
+         background-image: linear-gradient(to top, #59bffa 0%, #1799ed 50%, #59bffa 100%)
    &_fluid
       width: 100%
    &_md
@@ -143,7 +163,7 @@ body
    +cover
    &::after
       +coverdiv
-      background-image: linear-gradient(to right, #1c9bed, #57bef9)
+      background-image: linear-gradient(to right, #1c9bed 0%, #57bef9 100%)
       opacity: .8
       pointer-events: none
       content: ''
