--- a/src/sass/components/footer.sass
+++ b/src/sass/components/footer.sass
@@ -1,3 +1,18 @@
 .footer
-   padding: 200px 0 0
+   padding: 40px 0
    &__container
+      display: flex
+      align-items: center
+      justify-content: space-between
+      margin-bottom: 30px
+   &__title
+      flex: 0 1 240px
+      span
+         color: $color1
+         +f('ms900')
+   &__copyright
+      padding: 15px 0 0
+      font-size: 15px
+      color: #a9b0b3
+      text-align: center
+      border-top: 1px solid rgba(#469dd6, .2)
