--- a/src/sass/components/forms.sass
+++ b/src/sass/components/forms.sass
@@ -12,8 +12,9 @@
       +placeholder-color(#75797b)
       +sm
          padding: 0 20px
-      //&:focus
-         background-color: #fff
+      &:focus
+         border-color: #1799ed
+         
    &__icon
       position: absolute
       top: 0
@@ -31,7 +32,7 @@
          height: 30px
          background-color: #ebebeb
          content: ''
-
+      
 .textarea
    display: block
    width: 100%
@@ -51,3 +52,135 @@
    cursor: pointer
    input
       display: none
+
+.form-ask
+   display: flex
+   align-items: center
+   font-size: 15px
+   &__text
+      margin-right: 23px
+      color: #333333
+   &__choice
+      $parent: &
+      display: flex
+      align-items: center
+      &-item
+         display: flex
+         cursor: pointer
+         &:not(:last-child)
+            margin-right: 15px
+         input
+            display: none
+            &:checked + #{$parent}-visual
+               border-color: #1799ed
+               &::after
+                  opacity: 1
+            
+      &-text
+         color: #75797b
+      &-visual
+         position: relative
+         width: 18px
+         height: 18px
+         margin-right: 8px
+         border: 1px solid rgba(#1799ed, .5)
+         border-radius: 50%
+         transition: .3s ease-in-out
+         &::after
+            +vcenter
+            width: 10px
+            height: 10px
+            background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
+            border-radius: 50%
+            transition: .3s ease-in-out
+            opacity: 0
+            content: ''
+
+.file-block
+   position: relative
+   text-align: left
+   color: #3198f0
+   +f('ms300', 15, 15)
+   +xs
+      display: flex
+      flex-direction: column-reverse
+   &__add-btn
+      display: inline-flex
+      align-items: center
+      flex: 0 1 auto
+      cursor: pointer
+      +trs
+      +xs
+         margin-bottom: 5px
+      .is-active &
+         opacity: 0
+         pointer-events: none
+      
+      &:hover
+         span
+            border-bottom-color: transparent
+         
+      input
+         display: none
+      span
+         margin-left: 10px
+         border-bottom: 1px solid rgba(#3198f0, .6)
+         transition: .3s ease-in-out
+   
+   &__remove-btn
+      position: absolute
+      left: 15px
+      top: 50%
+      right: 15px
+      opacity: 0
+      width: 122px
+      overflow: hidden
+      transform: translate(10px, -50%)
+      display: flex
+      align-items: center
+      cursor: pointer
+      pointer-events: none
+      transition: .3s ease
+      color: #3198f0
+      +f('ms300', 15, 15)
+      +xs
+         top: auto
+         bottom: 0
+      .is-active &
+         opacity: 1
+         transform: translate(0, -50%)
+         pointer-events: auto
+      
+      &:hover
+         color: rgba(213, 29, 72, 1)
+         svg
+            fill: rgba(213, 29, 72, 1)
+      svg
+         flex-shrink: 0
+         font-size: 15px
+         margin-right: 11px
+         fill: #3198f0
+         +gpu
+         +trs
+   
+   &__name-field
+      position: absolute
+      top: 50%
+      right: 0
+      opacity: 0
+      transform: translate(-10px, -50%)
+      width: 220px
+      transition: .3s ease
+      text-align: right
+      overflow: hidden
+      text-overflow: ellipsis
+      white-space: nowrap
+      color: $color2
+      +xs
+         position: static
+         width: 100%
+         height: 25px
+         text-align: left
+      .is-active &
+         opacity: 1
+         transform: translate(0, -50%)
