--- a/src/sass/components/sliders.sass
+++ b/src/sass/components/sliders.sass
@@ -4,10 +4,61 @@
       display: block
       
 .slider-dots
+   $parent: &
    display: flex
    justify-content: center
+   line-height: 0
+   &_white
+      li
+         button
+            background: rgba($white, .5)
+            &::after
+               background: rgba($white, .5)
+         &.slick-active button
+            background-color: #fff
+            &::after
+               background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
+            &::before
+               border-color: rgba(#fff, .5)
+   &_blue
+      li
+         button
+            background: rgba(#bee4f6, .6)
+            &::after
+               background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
+         &.slick-active button
+            &::after
+               opacity: 1
+            &::before
+               border-color: #59bffa
    li
+      &:not(:last-child)
+         margin-right: 15px
+      &.slick-active
+         button
+            &::before
+               opacity: 1
       button
+         position: relative
          width: 10px
          height: 10px
-         background: rgba($white, .5)
+         border-radius: 50%
+         +hide-text
+         transition: .3s ease-in-out
+         &::before
+            position: absolute
+            top: -4px
+            left: -4px
+            right: -4px
+            bottom: -4px
+            opacity: 0
+            border: 1px solid
+            border-radius: 50%
+            transition: .3s ease-in-out
+            content: ''
+         &::after
+            +coverdiv
+            border-radius: 50%
+            transition: .3s ease-in-out
+            opacity: 0
+            content: ''
