--- a/src/templates/partials/_footer.pug
+++ b/src/templates/partials/_footer.pug
@@ -1,3 +1,30 @@
 //begin footer
 +b.FOOTER.footer
+	+e.container.container
+		+e.P.title Водительские медицинские справки
+			= ' '
+			span для ГАИ и ГИБДД
+		+b.NAV.nav.header__nav
+			-
+				navList = [
+				['Услуги и цены', 'services'],
+				['Почему мы', 'why-us'],
+				['Как мы работаем', 'work'],
+				['Гарантии', 'guarantees'],
+				['Отзывы', 'testimonials']
+				]
+			+e.UL.list
+				for navLink in navList
+					li: a(href=`#${navLink[1]}`)= navLink[0]
+
+		+b.call-block.header__call-block
+			+e.A.tel(href='tel:88008888888')
+				+e.DIV.tel-icon
+					+i('phone')
+				| 8 (800)
+				span 888 88 88
+			+e.A.link.dashed-link(href='#!' data-popup-target='call-popup') Заказать обратный звонок
+
+	.container
+		+e.P.copyright Все права защищены. © 2010-2018
 //end footer
