--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -22,3 +22,33 @@
          color: #fff
          font-size: 16px
 // end call-block //
+
+// *** begin request *** //
+.request
+   &__form
+      &-inner
+         margin-bottom: 30px
+         padding: 30px 20px
+         box-shadow: 0 8px 20px rgba(6, 53, 83, 0.13)
+         border-radius: 17px
+         border: 3px solid #fff
+         background-color: #fff
+      &-row
+         margin: 0 -8px
+         &:not(:last-child)
+            margin: 0 -8px 10px
+      &-field
+         flex: 0 1 calc(50% - 16px)
+         width: calc(50% - 16px)
+         margin: 0 8px
+         &_ask
+            display: flex
+            align-items: center
+            padding-left: 30px
+         &_upload
+            display: flex
+            justify-content: flex-start
+            align-items: center
+            padding: 0 15px
+            height: 60px
+// end request //
