--- a/src/sass/pages/home.sass
+++ b/src/sass/pages/home.sass
@@ -433,6 +433,8 @@
    &__slider
       .slick-list
          margin: 0 -15px
+      &-dots
+         margin-top: 40px
    &__item
       padding: 50px 15px 0
       &-content
@@ -441,7 +443,11 @@
          padding: 70px 30px 20px
          border-radius: 17px 17px 17px 0
          background: #fff
+         box-shadow:  0 0 25px rgba($black, .15)
          &::after
+            position: absolute
+            top: 100%
+            left: 0
             +arr(19, 19, #fff, tr)
             content: ''
       &-img
@@ -460,3 +466,87 @@
             +f('ms300')
          
 // end testimonials //
+
+// *** begin partners *** //
+.partners
+   padding: 70px 0
+   &__title
+      margin-bottom: 40px
+   &__slider
+      .slick-list
+         margin: 0 -7px
+         padding: 15px 0
+      &-dots
+         margin-top: 50px
+   &__item
+      width: 210px
+      margin: 0 7px
+      height: 124px
+      border-radius: 17px
+      border: 1px solid rgba(113, 203, 255, 0.5)
+      background-color: #ffffff
+      transition: .3s ease-in-out
+      cursor: pointer
+      &:hover
+         transform: translateY(-10px)
+         box-shadow: 0 13px 15px rgba(6, 44, 69, 0.1)
+      &-img-wrap
+         +flexCenter
+         height: 100%
+// end partners //
+
+// *** begin request-section *** //
+.request-section
+   padding: 60px 0
+   &__title
+      margin: 0 -70px 30px 0
+   &__content
+      max-width: 825px
+// end request-section //
+
+// *** begin contact *** //
+.contact
+   position: relative
+   height: 520px
+   &__map
+      +coverdiv
+      .gmnoprint, .gm-style-cc
+         display: none
+   &__container
+      display: flex
+      align-items: center
+      height: 100%
+   &__info
+      position: relative
+      width: 360px
+      padding: 30px 20px
+      box-shadow: 0 16px 15px rgba(6, 44, 69, 0.13)
+      border-radius: 3px 3px 17px 17px
+      background: #fff
+      &::before
+         position: absolute
+         top: 0
+         left: 0
+         width: 100%
+         height: 4px
+         border-radius: 2px 2px 0 0
+         background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
+         content: ''
+      &-title
+         font-size: 36px
+         line-height: 40px
+      &-inner
+         margin-bottom: 30px
+      &-address
+         margin-bottom: 10px
+         font-style: normal
+      &-tel
+         +f('ms900')
+         font-size: 20px
+         line-height: 20px
+         color: rgba(#5a5f62, .9)
+      &-btn
+      &-icon
+         margin-right: 14px
+         color: $color1
+// end contact //
