--- a/src/sass/components/_popups.sass
+++ b/src/sass/components/_popups.sass
@@ -13,7 +13,7 @@
    text-align: center
    font-size: 0
    transform: translate3d(0, 0, 0)
-   background-image: linear-gradient(45deg, #5936b2 0%, #7453c6 100%)
+   background: rgba(#000, .6)
    transition: .3s ease-in-out
    will-change: opacity, transform
    $parent: &
@@ -30,8 +30,8 @@
       visibility: visible
    &__close
       position: absolute
-      top: -30px
-      right: -15px
+      top: -35px
+      right: 30px
       z-index: 10
       cursor: pointer
       padding: 0
@@ -39,17 +39,12 @@
       align-items: center
       justify-content: center
       border: 0
-      width: 32px
-      height: 32px
-      +xs
-         top: -30px
-         right: 0
       &:hover svg
-         fill: $color3
+         fill: $color1
       svg
          fill: $white
-         width: 10px
-         height: 10px
+         width: 24px
+         height: 24px
          +trs
    
    &__container
@@ -66,7 +61,25 @@
       text-align: left
       border-radius: 5px
       +mob-fix
-
+      &_xs
+         max-width: 440px
+      &_lg
+         max-width: 855px
+   &__inner
+      padding: 45px 25px 50px
+      box-shadow: 0 8px 20px rgba(6, 53, 83, 0.13)
+      border-radius: 17px
+      background-color: #ffffff
+      +xs
+         padding: 30px 25px 35px
+      p
+         color: #5c6164
+         font-size: 18px
+         line-height: 24px
+         text-align: center
+         +xs
+            font-size: 16px
+            
 body.popup-opened
    overflow: hidden
 
@@ -75,3 +88,28 @@ body.popup-opened
    -moz-transform: translate3d(0, 0, 0)
    transform: translate3d(0, 0, 0)
   
+// *** begin thanks-popup *** //
+.thanks-popup
+   text-align: center
+   &__title
+      margin-bottom: 14px
+      text-transform: uppercase
+   &__btn
+      display: none
+// end thanks-popup //
+
+// *** begin call-popup *** //
+.call-popup
+   p
+      margin-bottom: 20px
+   &__title
+      margin-bottom: 20px
+      text-align: center
+   &__form
+      &-row
+         margin: 0 0 30px
+         flex-direction: column
+      &-field
+         &:not(:last-child)
+            margin-bottom: 10px
+// end call-popup //
