--- a/src/templates/layouts/_layout.pug
+++ b/src/templates/layouts/_layout.pug
@@ -28,8 +28,9 @@ html(lang='ru')
         include ../partials/_footer
 
       block modals
-        +popup({ name: 'add-testimonial' })
-        +popup({ name: 'write-us' })
+        +popup({ name: 'call-popup' })
+        +popup({ name: 'request-popup' })
+        +popup({ name: 'thanks-popup' })
 
       //LOAD SCRIPTS
       block scripts
