--- a/src/templates/partials/_footer.pug
+++ b/src/templates/partials/_footer.pug
@@ -4,7 +4,7 @@
 		+e.P.title Водительские медицинские справки
 			= ' '
 			span для ГАИ и ГИБДД
-		+b.NAV.nav.header__nav
+		+b.NAV.nav._footer
 			-
 				navList = [
 				['Услуги и цены', 'services'],
