--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -6,49 +6,96 @@
    &__tel
       display: flex
       align-items: center
+      margin-bottom: 2px
       font-size: 22px
       color: $color2
+      &:hover
+         span
+            color: darken(#1799ed, 15)
       span
          margin-left: 4px
          color: $color1
          +f('ms900')
+         transition: .3s ease-in-out
       &-icon
          +flexCenter
+         flex-shrink: 0
          width: 30px
          height: 30px
-         margin-right: 15px
+         margin-right: 7px
          background: #7f898e linear-gradient(to right, #1799ed 0%, #59bffa 100%)
          border-radius: 50%
          color: #fff
          font-size: 16px
+   &__link
+      margin-left: 2px
 // end call-block //
 
 // *** begin request *** //
 .request
+   $parent: &
+   &__top-text
+      margin-bottom: 30px
+   &__title
+      margin-bottom: 10px
+      text-align: center
    &__form
       &-inner
-         margin-bottom: 30px
-         padding: 30px 20px
+         margin-bottom: 22px
+         padding: 50px 46px 31px 37px
          box-shadow: 0 8px 20px rgba(6, 53, 83, 0.13)
          border-radius: 17px
          border: 3px solid #fff
          background-color: #fff
+         +sm
+            padding: 50px 25px 30px
+         +xs
+            padding: 15px
       &-row
          margin: 0 -8px
+         +xs
+            flex-direction: column
          &:not(:last-child)
             margin: 0 -8px 10px
       &-field
          flex: 0 1 calc(50% - 16px)
          width: calc(50% - 16px)
          margin: 0 8px
+         +xs
+            flex: 0 1 auto
+            width: 100%
+            margin: 0
          &_ask
             display: flex
             align-items: center
             padding-left: 30px
+            +xs
+               padding: 15px 0 0
+               justify-content: center
          &_upload
             display: flex
             justify-content: flex-start
             align-items: center
             padding: 0 15px
-            height: 60px
+            height: 53px
+         &:not(:last-child)
+            +xs
+               margin: 0 0 8px
+      &-actions
+         display: flex
+         align-items: center
+         text-align: left
+         +md
+            flex-direction: column
+            text-align: center
+         #{$parent}_popup &
+            margin-top: 15px
+            text-align: left
+      &-submit
+         #{$parent}_popup &
+            width: 100%
+            max-width: 360px
+            +xs
+               max-width: none
+
 // end request //
