--- a/src/sass/components/footer.sass
+++ b/src/sass/components/footer.sass
@@ -1,17 +1,34 @@
 .footer
-   padding: 40px 0
+   position: relative
+   padding: 32px 0 20px
+   +xs
+      padding: 25px 0 20px
+   &::after
+      position: absolute
+      top: 100%
+      left: 0
+      width: 100%
+      height: 3px
+      background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
+      content: ''
    &__container
       display: flex
       align-items: center
       justify-content: space-between
       margin-bottom: 30px
+      +xs
+         flex-direction: column
+         margin-bottom: 20px
    &__title
       flex: 0 1 240px
+      +xs
+         flex: 0 1 auto
+         text-align: center
       span
          color: $color1
          +f('ms900')
    &__copyright
-      padding: 15px 0 0
+      padding: 24px 0 0
       font-size: 15px
       color: #a9b0b3
       text-align: center
