--- a/src/sass/components/forms.sass
+++ b/src/sass/components/forms.sass
@@ -1,20 +1,25 @@
 .form-field
+   $parent: &
    position: relative
    &__input
       width: 100%
       height: 60px
       padding: 0 30px 0 78px
-      +f('gp400', 14, 46)
+      +f('ms300', 15, 46)
       border-radius: 30px
       background-color: #f9f9f9
       border: 1px solid #e6e6e6
       transition: .3s ease-in-out
       +placeholder-color(#75797b)
-      +sm
-         padding: 0 20px
+      +xs
+         padding: 0 20px 0 48px
+         height: 50px
+         font-size: 14px
       &:focus
          border-color: #1799ed
-         
+      #{$parent}.has-error &
+         border-color: rgba(213, 29, 72, 1)
+   
    &__icon
       position: absolute
       top: 0
@@ -23,6 +28,11 @@
       width: 60px
       color: #3198f0
       +flexCenter
+      font-size: 18px
+      +xs
+         width: 40px
+      #{$parent}.has-error &
+         color: rgba(213, 29, 72, 1)
       &::after
          position: absolute
          top: 50%
@@ -32,6 +42,10 @@
          height: 30px
          background-color: #ebebeb
          content: ''
+      .zmdi
+         position: relative
+         top: -1px
+         right: -4px
       
 .textarea
    display: block
@@ -146,10 +160,14 @@
       +xs
          top: auto
          bottom: 0
+         left: 50%
+         right: auto
       .is-active &
          opacity: 1
          transform: translate(0, -50%)
          pointer-events: auto
+         +xs
+            transform: translate(-50%, -50%)
       
       &:hover
          color: rgba(213, 29, 72, 1)
@@ -166,21 +184,78 @@
    &__name-field
       position: absolute
       top: 50%
-      right: 0
+      right: 15px
       opacity: 0
       transform: translate(-10px, -50%)
       width: 220px
+      height: 15px
       transition: .3s ease
       text-align: right
       overflow: hidden
       text-overflow: ellipsis
       white-space: nowrap
       color: $color2
+      font-size: 12px
+      pointer-events: none
       +xs
          position: static
          width: 100%
          height: 25px
-         text-align: left
+         text-align: center
+         transform: none!important
       .is-active &
          opacity: 1
          transform: translate(0, -50%)
+         pointer-events: auto
+
+.captcha
+   $parent: &
+   display: flex
+   margin-left: 25px
+   +md
+      order: -1
+      margin: 0 0 30px
+   +xs
+      margin: 0 auto 20px
+   &__field
+      flex: 0 0 130px
+      width: 130px
+      height: 55px
+      padding: 5px
+      margin-right: 5px
+      border-radius: 3px
+      background-color: #ffffff
+      +xs
+         height: 50px
+      #{$parent}_mod &
+         border: 1px solid #e0e0e0
+         +xs
+            flex: 0 1 auto
+            margin: 0 0 5px
+         
+   input
+      flex: 0 1 225px
+      width: 225px
+      height: 55px
+      padding: 0 25px
+      border-radius: 3px
+      +f('ms300', 15, 55)
+      background-color: #ffffff
+      +placeholder-color(#a3a8ac)
+      +xs
+         flex: 0 0 150px
+         width: 150px
+         height: 50px
+         line-height: 50px
+   
+   &_mod
+      margin: 35px 0 30px
+      +xs
+         flex-direction: column
+         align-items: center
+      input
+         border: 1px solid #e0e0e0
+         +xs
+            flex: 0 1 auto
+   &_request
+      margin: 0 0 0 15px
