--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -1,8 +1,32 @@
 .header
    $parent: &
-   padding: 20px 0
-   border-top: 3px solid $color1
+   position: fixed
+   top: 0
+   left: 0
+   width: 100%
+   height: 80px
+   z-index: 100
+   padding: 26px 0 0
+   background: #fff
+   +xs
+      height: auto
+      padding: 15px 0
+   &.is-fixed
+      height: 100px
+      box-shadow: 0 0 15px rgba(113, 203, 255, 0.5)
+      +xs
+         height: auto
+   &::before
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 3px
+      background-color: #369fd9
+      background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
+      content: ''
    &__container
+      position: static
       display: flex
       align-items: center
       justify-content: space-between
@@ -11,3 +35,9 @@
       span
          color: $color1
          +f('ms900')
+   &__call-block
+      +md
+         margin-left: auto
+         margin-right: 30px
+      +xs
+         display: none
