--- a/src/sass/components/nav.sass
+++ b/src/sass/components/nav.sass
@@ -1,14 +1,16 @@
 .nav
-   +xs
+   $parent: &
+   margin: 0 auto
+   +md
       flex-direction: column
       justify-content: center
       position: absolute
-      top: 130px
+      top: 100px
       left: 0
       width: 100%
       height: 100vh
       z-index: 10
-      padding-bottom: 130px
+      padding-bottom: 100px
       overflow: auto
       opacity: 0
       border: 0
@@ -17,20 +19,22 @@
       transition: transform .4s ease, opacity .4s ease, visibility 0s .4s, -webkit-transform .4s ease
       background: #fff
       text-align: center
-      box-shadow: inset 0 0 10px rgba($color1, .5)
+      box-shadow: inset 0 0 25px rgba(28,155,238,.5)
+   +xs
+      top: 70px
+      padding-bottom: 70px
    &.is-active
       opacity: 1
       visibility: visible
       transform: translate3d(0, 0, 0)
       transition: transform .4s ease, opacity .4s ease, visibility 0s 0s, -webkit-transform .4s ease
+   &_footer
+      +md
+         display: none
    &__list
       display: flex
       justify-content: space-between
-      margin-right: 14px
-      +sm
-         margin-right: 0
-         padding-bottom: 4px
-      +xs
+      +md
          flex-direction: column
          justify-content: center
          align-items: center
@@ -39,10 +43,18 @@
          padding-bottom: 0
       li
          position: relative
+         +md
+            opacity: 0
+            transform: translateY(20px)
+            transition: .3s ease-in-out
+         .is-active &
+            opacity: 1
+            transform: translateY(0)
          &:not(:last-child)
-            margin-right: 30px
-            +xs
+            margin-right: 28px
+            +md
                margin-bottom: 30px
+               margin-right: 0
             &::after
                position: absolute
                top: 50%
@@ -53,13 +65,24 @@
                border-radius: 50%
                background-image: linear-gradient(to right, #1799ed 0%, #59bffa 100%)
                content: ''
+               +md
+                  display: none
+                  
+         $elements: 5
+         @for $i from 0 to $elements
+            &:nth-child(#{$i + 1})
+               transition-delay: #{$i * 0.1s}
          a
             display: block
             font-size: 15px
-            line-height: 1
+            line-height: 20px
             color: #5c6164
             border-bottom: 1px dashed transparent
             transition: .3s ease-in-out
+            +md
+               +f('ms500')
+               color: $color1
+               font-size: 16px
             &:hover
                color: $color1
                border-bottom-color: rgba(#2290ca, .7)
@@ -73,19 +96,19 @@
    outline: 0
    padding: 0
    z-index: 11
-   +xs
+   +md
       display: block
    
    &.is-active span
       color: $color1
    
-   &-burger
+   &__burger
       display: block
       margin: auto
       width: 40px
       height: 40px
       cursor: pointer
-   &-lines
+   &__lines
       display: block
       width: 40px
       height: 3px
@@ -94,7 +117,7 @@
          height: 3px
       position: relative
       transform: translateY(25px)
-      background: #fff
+      background-image: linear-gradient(to right,#1799ed 0%,#59bffa 100%)
       transition: all .3s
       #{$parent}.is-active &
          background: rgba(255, 255, 255, 0)
@@ -103,14 +126,14 @@
          position: absolute
          left: 0
          bottom: 10px
-         background: #fff
+         background-image: linear-gradient(to right,#1799ed 0%,#59bffa 100%)
          transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1)
       &:after
          content: ""
          position: absolute
          left: 0
          top: 10px
-         background: #fff
+         background-image: linear-gradient(to right,#1799ed 0%,#59bffa 100%)
          transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1)
       #{$parent}.is-active &
          &:after
