--- a/src/sass/components/sliders.sass
+++ b/src/sass/components/sliders.sass
@@ -62,3 +62,33 @@
             transition: .3s ease-in-out
             opacity: 0
             content: ''
+            
+.slider-btn
+   position: absolute
+   top: 100%
+   display: flex
+   align-items: center
+   justify-content: center
+   width: 35px
+   height: 35px
+   margin-top: -10px
+   background-color: rgba(#fff, 1)
+   border: 1px solid rgba(113,203,255,.5)
+   border-radius: 50%
+   transition: .3s ease-in-out
+   &:hover
+      opacity: 1
+   &.slick-disabled
+      pointer-events: none
+      opacity: .2
+   &_prev
+      left: 20%
+      svg
+         left: -1px
+   &_next
+      right: 20%
+      svg
+         right: -1px
+   svg
+      position: relative
+      fill: $color1
