--- a/src/sass/components/forms.sass
+++ b/src/sass/components/forms.sass
@@ -218,6 +218,7 @@
    +xs
       margin: 0 auto 20px
    &__field
+      position: relative
       flex: 0 0 130px
       width: 130px
       height: 55px
@@ -232,6 +233,13 @@
          +xs
             flex: 0 1 auto
             margin: 0 0 5px
+      img
+         position: absolute
+         top: 0
+         left: 0
+         display: block
+         width: 100%
+         height: 100%
          
    input
       flex: 0 1 225px
