--- a/src/templates/home.pug
+++ b/src/templates/home.pug
@@ -38,6 +38,7 @@ block content
 								+e.INPUT(type='submit' value='')
 							+b.captcha
 								+e.field
+									+e.IMG(src='img/other/captcha.png' alt='image')
 								+e.INPUT(type='text' name='' placeholder='Введите код' required)
 				+e.IMG.img(src='img/other/screen_girl.png' alt='image')
 		//end screen
@@ -403,6 +404,7 @@ block content
 									+e.INPUT(type='submit' value='')
 								+b.captcha
 									+e.field
+										+e.IMG(src='img/other/captcha.png' alt='image')
 									+e.INPUT(type='text' name='' placeholder='Введите код' required)
 
 				+e.IMG.bg-img(src='img/bg/web-nurse.png')
